--- a/client/views/index.html
+++ b/client/views/index.html
@@ -66,8 +66,12 @@
                         <button type="button" class="btn btn-small btn-menu">Find Users</button>
                     </li>
                     <li>
-                        <button type="button" class="btn btn-small btn-menu">Create a New LD</button>
+                        <button type="button" class="btn btn-small btn-menu" href ng-click="createLD()">Create a New
+                            LD
+                        </button>
+
                     </li>
+
                 </ul>
                 <div class="pull-right nav-closed">
                     <ul class="nav pull-right">
@@ -88,18 +92,124 @@
                     </ul>
                 </div>
             </div>
+
             <!--/.nav-collapse -->
         </div>
     </div>
+
 </div>
 <!-- End Nav Bar User View -->
 
-<div ng-view class="container"></div>
+<!-- Start LD creation Modal -->
+
+<div modal="beOpen" close="closeLD()" options="opts">
+
+    <div class="modal-header">
+        <h4>Create a New Design</h4>
+
+        <div class="clearfix"></div>
+    </div>
+    <div class="modal-body">
+        <form novalidate="" class="createLdForm">
+            <div class="formLevel">
+                <label class="formLabel"><i class="icon-ok"></i> Design Name*:</label>
+                <input class="formInput" type="text" ng-model="ld.name" required="">
+                <span class="clearfix"></span>
+            </div>
+            <div class="formLevel">
+                <label class="formLabel formLabel"><i class="icon-flag"></i> Language Level:</label>
+
+                <div class="formCheck">
+                    <input type="checkbox" ng-model="ld.qcer.a1"> A1
+                    <input type="checkbox" ng-model="ld.qcer.a2"> A2
+                    <input type="checkbox" ng-model="ld.qcer.b1"> B1
+                    <input type="checkbox" ng-model="ld.qcer.b2"> B2
+                    <input type="checkbox" ng-model="ld.qcer.c1"> C1
+                    <input type="checkbox" ng-model="ld.qcer.c2"> C2
+                </div>
+                <span class="clearfix"></span>
+            </div>
+            <div class="formLevel">
+                <label class="formLabel"><i class="icon-time"></i> Design Scope*:</label>
+                <input class="formInput" type="text" ng-model="ld.scope" placeholder="typeahead..." required="">
+                <span class="clearfix"></span>
+
+                <div class="formTag">
+                    <ul class="zeroMargin scopes" ng-show="ld.scope">
+                        <li class="modalEditItem"><span class="modalEditItemLink">{{ld.scope}} <a ng-href="#"><i
+                                class="icon-remove-circle"></i> </a></span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="formLevel">
+                <label class="formLabel"><i class="icon-map-marker"></i> Topics*:</label>
+                <input class="formInput" type="text" ng-model="ld.subjects" placeholder="typeahead..." required="">
+                <span class="clearfix"></span>
+
+                <div class="formTag">
+                    <ul ng-repeat="subject in ld.subjects" class="zeroMargin subjects">
+                        <li class="modalEditItem"><span class="modalEditItemLink">{{subject}} <a ng-href="#"><i
+                                class="icon-remove-circle"></i> </a></span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="formLevel">
+                <label class="formLabel"><i class="icon-tasks"></i> Objectives*:</label>
+                <input class="formInput" type="text" ng-model="ld.aims" placeholder="typeahead..." required="">
+                <span class="clearfix"></span>
+
+                <div class="formTag">
+                    <ul ng-repeat="aim in ld.aims" class="zeroMargin objectives">
+                        <li class="modalEditItem"><span class="modalEditItemLink">{{aim}} <a ng-href="#"><i
+                                class="icon-remove-circle"></i> </a></span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="formLevel">
+                <label class="formLabel"><i class="icon-backward"></i> Pre-Requisites:</label>
+                <input class="formInput" type="text" ng-model="ld.needs" placeholder="typeahead..." required="">
+                <span class="clearfix"></span>
+
+                <div class="formTag">
+                    <ul ng-repeat="need in ld.needs" class="zeroMargin prerequisites">
+                        <li class="modalEditItem"><span class="modalEditItemLink">{{need}} <a ng-href="#"><i
+                                class="icon-remove-circle"></i> </a></span>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+
+            <div class="formLevel">
+                <label class="formLabel"><i class="icon-user"></i> Students' Description:</label>
+                <textarea class="formInput" ng-model="ld.students" rows="4"></textarea>
+                <span class="clearfix"></span>
+            </div>
+
+        </form>
+
+    </div>
+    <div class="modal-footer">
+        <button class="btn btnFormCancel" ng-click="closeLD()">Cancel</button>
+        <button class="btn btnForm " ng-click="ok()">Create</button>
+    </div>
+</div>
+
+<!-- End LD creation Modal -->
+
+
+<div ng-view class="container">
+</div>
 <div id="footer">
     <a class="scrollup" href="#">Scroll</a>
 
     <div id="copyInfo">LEDITA is distributed under <a href="http://opensource.org/licenses/MIT" target="_blank">MIT
-        Licence</a><br>&copy; 2011-2013 <a href="https://github.com/arpetti" target="_blank">Alessandro Arpetti</a> and <a href="https://github.com/danielabar" target="_blank">Daniela Baron</a></div>
+        Licence</a><br>&copy; 2011-2013 <a href="https://github.com/arpetti" target="_blank">Alessandro Arpetti</a> and
+        <a href="https://github.com/danielabar" target="_blank">Daniela Baron</a></div>
 </div>
 <!-- Vendor Lib -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
