--- a/client/views/partials/ldEditView.html
+++ b/client/views/partials/ldEditView.html
@@ -26,28 +26,40 @@
         <div class="clear marginTopSidebar"><h5 class="zeroMargin"><i class="icon-map-marker"></i> Topics:</h5>
 
             <form ng-submit="addSubject()" class="sidebarForm">
-                <input type="text" class="sidebarInput" ng-model="subject" placeholder="add new subject">
-                <input class="btn sidebarButton" type="submit" value="+">
+                <input type="text" class="sidebarInput" ng-model="subject" placeholder="add new topic">
+                <button class="btn sidebarButton" type="submit" ><i class="icon-plus-sign icon-white"></i> </button>
             </form>
             <ul ng-repeat="subject in learningDesign.subjects" class="zeroMargin subjects">
                 <li class="sidebarEditItem"><span class="sidebarEditItemLink">{{subject.subject_name}} <a ng-href="#" ><i class="icon-remove-circle"></i> </a></span></li>
             </ul>
         </div>
         <div class="clear marginTopSidebar"><h5 class="zeroMargin"><i class="icon-tasks"></i> Objectives:</h5>
+            <form ng-submit="addAims()" class="sidebarForm">
+                <input type="text" class="sidebarInput" ng-model="aims" placeholder="add new objective">
+                <button class="btn sidebarButton" type="submit" ><i class="icon-plus-sign icon-white"></i> </button>
+            </form>
             <ul ng-repeat="objective in learningDesign.objectives" class="zeroMargin objectives">
-                <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">{{objective.objective_descr}}</a>
+                <li class="sidebarEditItem"><span class="sidebarEditItemLink">{{objective.objective_descr}} <a ng-href="#" ><i class="icon-remove-circle"></i> </a></span>
                 </li>
             </ul>
         </div>
         <div class="clear marginTopSidebar"><h5 class="zeroMargin"><i class="icon-backward"></i> Pre-Requisites:</h5>
+            <form ng-submit="addNeeds()" class="sidebarForm">
+                <input type="text" class="sidebarInput" ng-model="needs" placeholder="add new pre-requisites">
+                <button class="btn sidebarButton" type="submit" ><i class="icon-plus-sign icon-white"></i> </button>
+            </form>
             <ul ng-repeat="prereq in learningDesign.prerequisites" class="zeroMargin prerequisites">
-                <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">{{prereq.prereq_name}}</a>
+                <li class="sidebarEditItem"><span  class="sidebarEditItemLink">{{prereq.prereq_name}} <a ng-href="#" ><i class="icon-remove-circle"></i> </a></span>
                 </li>
             </ul>
         </div>
         <div class="clear marginTopSidebar">
             <h5 class="zeroMargin"><i class="icon-user"></i> Students' Description:</h5>
-            <span>{{ learningDesign.ld_students_profile }}</span>
+            <form class="sidebarForm">
+                <textarea class="sidebarTextarea" rows="4">{{ learningDesign.ld_students_profile }}</textarea>
+
+            </form>
+
         </div>
 
         <!-- TODO: 2nd phase - Tag system -->
