--- a/client/views/partials/home.html
+++ b/client/views/partials/home.html
@@ -2,29 +2,37 @@
     <!-- LD BOX START -->
     <div ng-repeat="learningDesign in learningDesigns | orderBy:'ld_last_edit_date':true" class="ld-border ld-item"
          ng-show="learningDesign.ld_publication==1">
-        <div class="ld-top">
-            <div class="qcer">
-                <span class="qcer-spacer" ng-repeat="qcer in learningDesign.qcers">{{ qcer.qcer_name }}</span>
+
+        <a ng-href="ld/{{ learningDesign.ld_id }}">
+            <div class="ld-center text-center">
+                <h4 class="ld-name-text">
+                    {{ learningDesign.ld_name }}</h4>
+
+                <div class="qcer">
+                    <i class="icon-flag" ng-show="learningDesign.qcers"></i>
+                    <span class="qcer-spacer" ng-repeat="qcer in learningDesign.qcers">{{ qcer.qcer_name }}</span>
+                </div>
+                <div class="scope"><i class="icon-bell "></i> {{ learningDesign.ld_scope }}
+                </div>
+
             </div>
-            <div class="scope">
-                {{ learningDesign.ld_scope }}
-            </div>
-        </div>
-        <div class="ld-center text-center">
-            <h4 class="ld-name-text"><a ng-href="ld/{{ learningDesign.ld_id }}">
-                {{ learningDesign.ld_name }}</a></h4>
-        </div>
+        </a>
+
         <div class="ld-bottom">
+
             <div class="authorName">
+
                 <!-- FIXME: add dynamic link to LD author profile page -->
-                <a ng-href="#"> {{ learningDesign.user_name }}&nbsp;{{ learningDesign.user_last_name
+                <a ng-href="#"> <i class="icon-user icon-white"></i> {{ learningDesign.user_name }}&nbsp;{{
+                    learningDesign.user_last_name
                     }} </a>
             </div>
-            <!-- TODO: Like button. If the LD is already liked, put class 'liked'. Else, put class 'likes'.-->
+            <!-- TODO: Like button. If the LD is already liked, put class 'liked'. Else, put class 'likes'.
             <div class="likes">
-                <!-- TODO: Like button. If the LD is already liked, add class 'icon-white'.-->
+                TODO: Like button. If the LD is already liked, add class 'icon-white'.
                 <a ng-href="#">Like <i class="icon-thumbs-up"></i></a>
             </div>
+        -->
         </div>
     </div>
     <!-- LD BOX END -->
