--- a/client/css/app.css
+++ b/client/css/app.css
@@ -699,6 +699,7 @@ input.sidebarInput {
     height: 18px;
     line-height: 20px;
     border: 2px solid #ffffff;
+    padding: 0;
 }
 
 .edit:hover, .delete:hover {
@@ -707,6 +708,8 @@ input.sidebarInput {
 
 .delete {
     float: right;
+
+
 }
 
 /* activities diagram
@@ -784,6 +787,7 @@ input.sidebarInput {
 }
 
 div.clearfix+div.levelBox, div.levelBox:first-child,
+div.newActBox+div.levelBox, div.newActBox:first-child,
 div.clearfix+div.levelBoxChild, div.levelBoxChild:first-child  {
     background: none;
     padding-top: 0;
